--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
 }
 
 /* Container styling */
-.container {
+.app-wrapper {
   margin-top: 2rem;
 }
 
@@ -116,7 +116,7 @@ button {
 }
 
 .daily-table {
-  width: 80%;
+  width: 95%;
   border-collapse: collapse;
   margin-top: 10px;
 }
@@ -126,10 +126,12 @@ button {
   border: 1px solid #ccc;
   padding: 8px;
   text-align: center;
+  font-size: 14px; 
+  color: white;
 }
 
 .daily-table th {
-  background-color: #f2f2f2;
+  background-color: #1d1b1b;
   font-weight: bold;
 }
 
